# phys-lab-3

./: CMakeLists.txt
resources/: messages.json
src/: experimentList.hpp  main.cpp  measureList.cpp  measureList.h  testList.cpp  testList.h  textManager.cpp  textManager.h  utilityFuncs.hpp  window.cpp  window.h
